<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>net.java</groupId>
        <artifactId>jvnet-parent</artifactId>
        <version>4</version>
    </parent>

    <groupId>com.oracle.tools</groupId>
    <artifactId>oracle-tools</artifactId>
    <version>2.0.0-RC8-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Oracle Tools</name>

    <description>
        A set of open source runtime tools and utilities for use with
        products developed by, with or in part Oracle Corporation.

        Developed as part of the Oracle Coherence Community, though Oracle
        Coherence is not really required.
    </description>

    <url>http://java.net/projects/oracletools</url>

    <licenses>
        <license>
            <name>Common Development and Distribution License 1.0 ("CDDL")</name>
            <url>http://opensource.org/licenses/CDDL-1.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Brian Oliver</name>
            <organization>Oracle Corporation</organization>
            <email>brian.oliver@oracle.com</email>
        </developer>

        <developer>
            <name>Jonathan Knight (aka: Gridman)</name>
            <organization>Oracle Corporation</organization>
            <email>jonathan.knight@oracle.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/coherence-community/oracle-tools.git</connection>
        <developerConnection>scm:git:https://github.com/coherence-community/oracle-tools.git</developerConnection>
        <url>https://github.com/coherence-community/oracle-tools.git</url>
      <tag>HEAD</tag>
    </scm>

    <modules>
        <module>oracle-tools-core</module>

        <module>oracle-tools-runtime</module>
        <module>oracle-tools-runtime-tests</module>

        <module>oracle-tools-testing-support</module>

        <module>oracle-tools-runtime-remote</module>
        <module>oracle-tools-runtime-remote-tests</module>

        <module>oracle-tools-runtime-virtual</module>
        <module>oracle-tools-runtime-virtual-tests</module>

        <module>oracle-tools-runtime-windows</module>
        <module>oracle-tools-runtime-windows-tests</module>

        <module>oracle-tools-coherence</module>
        <module>oracle-tools-coherence-tests</module>
        <module>oracle-tools-coherence-testing-support</module>

        <module>oracle-tools-runtime-vagrant</module>
        <module>oracle-tools-runtime-vagrant-tests</module>

        <module>oracle-tools-site</module>

        <module>oracle-tools-all</module>
    </modules>

    <properties>
        <!-- project options -->
        <skip-sign-artifacts>true</skip-sign-artifacts>
        <skip-remote-tests>true</skip-remote-tests>

        <!--
            defines the maven.java.net repository that should be targeted for download links
            when generating latest project documentation valid options: snapshots, releases
          -->
        <repository>snapshots</repository>

        <!-- source requirements -->
        <java.version>1.7</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- plugin dependency versions -->
        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
        <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
        <maven.doxia.markdown.plugin.version>1.6</maven.doxia.markdown.plugin.version>
        <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
        <maven.github.site.plugin.version>0.10-RC1</maven.github.site.plugin.version>
        <maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
        <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
        <maven.javadoc.plugin.version>2.9.1</maven.javadoc.plugin.version>
        <maven.release.plugin.version>2.5</maven.release.plugin.version>
        <maven.shade.plugin.version>2.3</maven.shade.plugin.version>
        <maven.site.plugin.version>3.4</maven.site.plugin.version>
        <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>

        <!-- dependency versions -->
        <asm.version>5.0.3</asm.version>
        <cglib.version>3.1</cglib.version>
        <coherence.version>3.7.1.13</coherence.version>
        <hamcrest.version>1.3</hamcrest.version>
        <jsch.version>0.1.51</jsch.version>
        <junit.version>4.11</junit.version>
        <mockito.version>1.9.5</mockito.version>
        <objenesis.version>2.1</objenesis.version>
    </properties>

    <dependencyManagement>
        <!-- enforce specific versions of dependencies -->
        <dependencies>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>

            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>

            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>

            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>${objenesis.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-plugin-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.0.4</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
                    <includes>
                        <include>**/*IT.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.deploy.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven.release.plugin.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <goals>deploy</goals>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.plugin.version}</version>
                <configuration>
                    <skip>${skip-sign-artifacts}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>